change path of images

--- a/event.html
+++ b/event.html
@@ -51,7 +51,7 @@
                 <div class="col">
                     <h2 class="event-title">Nos évenements</h2>
                     <div class="card">
-                        <img src="../Project-1/Images/animals-in-communities.jpg" class="card-img-top" alt="..." />
+                        <img src="Images/animals-in-communities.jpg" class="card-img-top" alt="..." />
                         <div itemscope itemtype="http://schema.org/Event" class="card-body">
                             <h5 itemprop="name" class="card-title">Action sauvetage</h5>
                             <datetime itemprop="startDate" content="2021-03-21">21/03/2021</datetime>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="border-separator-2"></div>
                     <div class="card">
-                        <img src="../Project-1/Images/world-animal-protection-office.jpg" class="card-img-top" alt="..." />
+                        <img src="Images/world-animal-protection-office.jpg" class="card-img-top" alt="..." />
                         <div itemscope itemtype="http://schema.org/Event" class="card-body">
                             <h5 itemprop="name" class="card-title">Portes ouvertes</h5>
                             <datetime itemprop="startDate" content="2021-05-15">15/05/2021</datetime>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="border-separator-2"></div>
                     <div class="card">
-                        <img src="../Project-1/Images/conference.JPG" class="card-img-top" alt="..." />
+                        <img src="Images/conference.JPG" class="card-img-top" alt="..." />
                         <div itemscope itemtype="http://schema.org/Event" class="card-body">
                             <h5 itemprop="name" class="card-title">Conférence-débat</h5>
                             <datetime itemprop="startDate" content="2021-07-19">19/07/2021</datetime>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="border-separator-2"></div>
                     <div class="card">
-                        <img src="../Project-1/Images/marathon.jpg" class="card-img-top" alt="..." />
+                        <img src="Images/marathon.jpg" class="card-img-top" alt="..." />
                         <div itemscope itemtype="http://schema.org/Event" class="card-body">
                             <h5 itemprop="name" class="card-title">Marathon</h5>
                             <datetime itemprop="startDate" content="2021-10-10">10/10/2021</datetime>
