--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="col discover-us">
                     <article>
                         <h2>Bienvenue au secours des animaux en détresse !</h2>
-                        <img src="../Project-1/Images/12-les-chaton-720px.jpg">
+                        <img src="Images/12-les-chaton-720px.jpg">
                     </article>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                         <div class="donation-text">
                             <h2 class="h5">Soutenez-nous !</h2>
                             <div class="icon-cat">
-                                <img src="../Project-1/Images/cat-pet-cartoon.png" alt="dessin de chat">
+                                <img src="Images/cat-pet-cartoon.png" alt="dessin de chat">
                             </div>
                             <div class="content-donation">
                                 <p>Vous souhaitez faire un <strong>don</strong> ? <br>Rendez-vous ici<a href="#" class="go"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
@@ -87,7 +87,7 @@
                     <article class="who-we-are">
                         <h2 class="h5">Qui sommes-nous ?</h2>
                         <div class="icon-dog">
-                            <img src="../Project-1/Images/Illustration_sans_titre(1).png" alt="dessin de chien">
+                            <img src="Images/Illustration_sans_titre(1).png" alt="dessin de chien">
                         </div>
                         <p>Le secours des animaux en détresse (SAD) est, historiquement en France, la première des sociétés de protection des animaux, qui œuvre dans le domaine de la protection animale [...]
                             <div class="suite-1"><a href="#"><i>Lire la suite</i></a></div>
@@ -101,7 +101,7 @@
                     <article class="event">
                         <h2 class="h5"><a href="#">Je participe !</a></h2>
                         <p><strong>Spectacles, conférérences, débats, marathons, tombolas</strong>...<br>retrouvez-nous partout en France</p>
-                        <img src="../Project-1/Images/cover-r4x3w1000-5ef9cf64b2914-dog-813103-1920.jpg">
+                        <img src="Images/cover-r4x3w1000-5ef9cf64b2914-dog-813103-1920.jpg">
                     </article>
                 </div>
             </div>
